--- a/1left.html
+++ b/1left.html
@@ -13,10 +13,12 @@
 
   <div class="content">
     <div class="text">
-      You turn left. As you continue walking, your feet feel water. 
-      It gets deeper until you’re up to your shins in murky water. 
-      Although you can’t see too far ahead, it looks like it lets up in a bit. 
-      As you’re considering your options, you feel something bobbing in the water.
+      <h2>You turn left. There's a slow dip in the path, and soon you're up to your ankles in murky water.
+      <br>
+      You feel something small bobbing below the surface.
+      <br>
+      Do you grab it or ignore it?
+      </h2>
     </div>
 
     <div class="leftbtn">
