--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
   <!-- main ajax content -->
   <div class="content" id="main-content">
     <div class="text">
-      Your head throbs as you come to in a damp, claustrophobic hallway. 
-      <br> The stone walls are lined with torches in iron brackets.
-      <br> Who lit the torches? There is no sound of people; all you can hear is your own breath.
-      <br> Behind you is a dead end. The only way is forward.
-      <br> You can't remember your name or your age, only that you shouldn't be here. That you need to get out.
+      <h2>You come to in an eerie, torch-lit corridor. 
+        <br>
+        You don't remember how you got there.
+        <br>
+        All you know is you need to get out.
+      </h2>
     </div>
 
     <div class="solebtn">
