--- a/l2ignore.html
+++ b/l2ignore.html
@@ -13,8 +13,8 @@
 
   <div class="content">
     <div class="text">
-      Better not to mess around with...whatever that is.
-      You continue trudging through the water, when it finally lets up
+      Better to leave it.
+      You trudge through the water, when it finally lets up
       and you're back on damp, muddy earth. You reach a dead end, but notice
       a small hole at the bottom, just big enough to crawl in.
       There's nowhere else to go but forward.
