--- a/l4note.html
+++ b/l4note.html
@@ -14,7 +14,7 @@
 
   <div class="content" data-event="unfold">
     <div class="note" id="note">
-      <!-- add note animation if possible or just static note -->
+        <img src="note.png">
     </div>
 
     <div class="solebtn">
