--- a/firstchoice.html
+++ b/firstchoice.html
@@ -23,9 +23,10 @@
     <div id="main-content">
       <div class="content">
         <div class="text">
-          You reach the end of this path. There’s a fork; you can go left or right. 
+          <h2>You reach the end of this path. There’s a fork; you can go left or right. 
           The left is dimly lit, with the sound of water dripping. 
           The right is slightly darker and completely soundless.
+          <h2>
         </div>
   
         <div class="leftbtn">
