--- a/l4note.html
+++ b/l4note.html
@@ -14,7 +14,7 @@
 
   <div class="content" data-event="unfold">
     <div class="note" id="note">
-        <img src="note.png">
+        <img src="assets/note.png">
     </div>
 
     <div class="solebtn">
