--- a/l5hole.html
+++ b/l5hole.html
@@ -13,15 +13,11 @@
 
   <div class="content">
     <div class="text">
-      You reach a dead end. Your heart sinks, but looking around
-      you notice that there is a small hole, just big enough
-      to crawl through. You look back at the water, but feel that the 
-      note must have some significance. The hole doesn't look like natural erosion;
-      it looks like someone has been here before. Maybe they left the note.
-
-      Maybe they got out.
-
-      You get down on your hands and knees. 
+    <h2>
+      There's a dead end ahead, but you notice a small hole on the bottom of the wall, just big enough to crawl through. 
+      <br>
+      There's only one way out: through. 
+      </h2>
     </div>
 
     <div class="solebtn">
