--- a/r2go.html
+++ b/r2go.html
@@ -13,24 +13,16 @@
   <div class="flicker-overlay"></div> 
 
   <div class="content" data-event="fall">
+    <audio id="fallSound" src="assets/fall.mp3"></audio>
     <div class="text" id="fallText">
-        You turn left, but your feet immediately slip over
-        a boundless crevasse. You are falling infinitely, your heart pounding,
-        so blindly terrified that your body does not recognize 
-        the moment you smack into the ground and wither into eternity.
+        <h2>You turn left, but your feet immediately slip over
+        a boundless crevasse. You fall infinitely, consumed by eternity.
+        </h2>
     </div>
 
-    <!-- add skull animation and "final" sound effect -->
-    <div class="solebtn">
-      <a href="index.html" class="ajax-link" id="restartButton">
-        <button>Start Over</button>
-      </a>
     </div>
   </div>
 
-  <!-- falling sound effect -->
-   <!--STILL NEEDED!!!!-->
-  <audio id="fallSound" src="assets/fall.mp3"></audio>
 
 </body>
 
