--- a/l3scrape.html
+++ b/l3scrape.html
@@ -13,18 +13,16 @@
 
   <div class="content">
     <div class="text">
-      Whatever is inside sounds pretty delicate.
-      You start rubbing the softened stone against 
+      <h2> You start scraping the softened stone against 
       the dry stone of the wall.
-
+      <br>
       Still rubbing.
 
-      If the stone wasn't wet, maybe you could make a fire.
+      <br>
 
       Finally, the stone makes a hissing sound as a small pocket
       of air emerges. You look inside and see a corked apothecary tube.
-      <!-- include animation of tube if possible -->
-      You open it and find a curled up piece of parchment.
+      You open it and find a curled up piece of parchment. </h2>
     </div>
 
     <div class="solebtn">
