--- a/l6inspect.html
+++ b/l6inspect.html
@@ -13,20 +13,16 @@
 
   <div class="content">
     <div class="text">
-      You emerge into the hole, which is clustered and damp.
-
-      But: there's sunlight! Or some kind of light. 
-      <!--lighten screen-->
-      It's filtering through the gaps in the stone wall. First,
-      you see nothing but grey, but then start to notice a pattern
-      in the rocks. Some are darker than others. It's beginning to look
-      familiar... like a pattern? Maybe the stones can be moved around a certain way... 
-      Some of them look damp, like they're ready to crumble.
+        <h2>
+      You emerge into a small cavern. Sunlight is filtering through cracks
+      in the stone wall, but you can't find any loose stones. Looking closer,
+      you see an inscription engraved in one of the stones.
+      </h2>
     </div>
 
     <div class="solebtn">
       <a href="l7grid.html" class="ajax-link">
-        <button>Inspect the Stones</button>
+        <button>Read the Inscription</button>
       </a>
     </div>
   </div>
