--- a/l8incorrect.html
+++ b/l8incorrect.html
@@ -14,12 +14,12 @@
 
   <div class="content" data-event="rumble">
     <div class="text">
-      Something starts rumbling, and the stones start to shake.
-      Some ancient curse rises through the small room and throws 
-      it into a frenzy; the walls crumble around you with 
-      astonishing force. You try to make it back to the hole and escape, 
-      but it's too late. You are crushed under a pile of rubble,
+        <h2>
+      The stones crumble around you.
+      <br>
+      You are crushed under a pile of rubble,
       never to be seen again.
+    </h2>
     </div>
 
     <div class="leftbtn">
