FINAL FINAL FINAL
i got locked in omg

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <div id="light-overlay"></div>
   <!-- keep outside ajax loaded content -->
   <div id="video-container">
     <video id="bg-video" autoplay muted loop playsinline>
