--- a/l2bob.html
+++ b/l2bob.html
@@ -11,9 +11,8 @@
 <body>
   <div class="flicker-overlay"></div> 
 
-  <!-- ✅ Everything stays inside .content now -->
   <div class="content" data-event="rattle">
-    <audio id="rattleSound" src="assets/rattle.mp3"></audio>  <!-- ✅ Audio is inside .content -->
+    <audio id="rattleSound" src="assets/rattle.mp3"></audio>  
 
     <div class="text">
       <h2>It's a withered stone, although it feels hollow.
@@ -26,7 +25,6 @@
       stones of the wall, although it may take hours. </h2>
     </div>
 
-    <!-- ✅ Buttons stay inside .content so they don’t disappear -->
     <div class="leftbtn">
       <a href="l3scrape.html" class="ajax-link">
         <button>Scrape It</button>
