--- a/l7grid.html
+++ b/l7grid.html
@@ -13,12 +13,11 @@
   <div class="flicker-overlay"></div> 
 
   <div class="content">
-    <!-- ✅ Instruction text on parchment -->
     <div class="text parchment">
       <i>Recite what you know...</i>
     </div>
 
-    <!-- ✅ Simple Text Entry Box with Button -->
+    <!-- TEXT ENTRY BOX -->
     <div class="input-container">
       <input type="text" id="input-box" placeholder="Type here..." autocomplete="off">
       <button id="submit-button">Enter</button>
